--- a/motion-interpolation.vcxproj
+++ b/motion-interpolation.vcxproj
@@ -28,14 +28,14 @@
     <ClCompile Include="dep\imgui\imgui_tables.cpp" />
     <ClCompile Include="dep\imgui\imgui_widgets.cpp" />
     <ClCompile Include="dep\imgui\misc\cpp\imgui_stdlib.cpp" />
-    <ClCompile Include="src\cameras\camera.cpp" />
-    <ClCompile Include="src\cameras\perspectiveCamera.cpp" />
+    <ClCompile Include="src\camera\camera.cpp" />
+    <ClCompile Include="src\camera\perspectiveCamera.cpp" />
     <ClCompile Include="src\frame.cpp" />
     <ClCompile Include="src\frameMesh.cpp" />
     <ClCompile Include="src\framebuffer.cpp" />
-    <ClCompile Include="src\guis\gui.cpp" />
-    <ClCompile Include="src\guis\leftPanel.cpp" />
-    <ClCompile Include="src\guis\perspectiveCameraGUI.cpp" />
+    <ClCompile Include="src\gui\gui.cpp" />
+    <ClCompile Include="src\gui\leftPanel.cpp" />
+    <ClCompile Include="src\gui\perspectiveCameraGUI.cpp" />
     <ClCompile Include="src\interpolation.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\plane\plane.cpp" />
@@ -55,14 +55,14 @@
     <ClInclude Include="dep\imgui\imstb_textedit.h" />
     <ClInclude Include="dep\imgui\imstb_truetype.h" />
     <ClInclude Include="dep\imgui\misc\cpp\imgui_stdlib.h" />
-    <ClInclude Include="src\cameras\camera.hpp" />
-    <ClInclude Include="src\cameras\perspectiveCamera.hpp" />
+    <ClInclude Include="src\camera\camera.hpp" />
+    <ClInclude Include="src\camera\perspectiveCamera.hpp" />
     <ClInclude Include="src\frame.hpp" />
     <ClInclude Include="src\frameMesh.hpp" />
     <ClInclude Include="src\framebuffer.hpp" />
-    <ClInclude Include="src\guis\gui.hpp" />
-    <ClInclude Include="src\guis\leftPanel.hpp" />
-    <ClInclude Include="src\guis\perspectiveCameraGUI.hpp" />
+    <ClInclude Include="src\gui\gui.hpp" />
+    <ClInclude Include="src\gui\leftPanel.hpp" />
+    <ClInclude Include="src\gui\perspectiveCameraGUI.hpp" />
     <ClInclude Include="src\interpolation.hpp" />
     <ClInclude Include="src\interpolationType.hpp" />
     <ClInclude Include="src\plane\plane.hpp" />
