--- a/motion-interpolation.vcxproj
+++ b/motion-interpolation.vcxproj
@@ -196,7 +196,7 @@
       <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy $(SolutionDir)src\ $(TargetDir)src\ /E/Y</Command>
+      <Command>xcopy "$(SolutionDir)"src\ "$(TargetDir)"src\ /E/Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -222,7 +222,7 @@
       <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy $(SolutionDir)src\ $(TargetDir)src\ /E/Y</Command>
+      <Command>xcopy "$(SolutionDir)"src\ "$(TargetDir)"src\ /E/Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
